# meka

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yaml  docs.yaml  release.yaml
contrib/container/: Dockerfile  agbox  mekabox
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/configuration/: cli-options.md  config-file.md  environment-variables.md  overview.md
docs/book/src/getting-started/: installation.md  quick-start.md
docs/book/src/providers/: claude-api.md  claude-oauth.md  claude.md  openai-api.md  openai-codex.md  overview.md
docs/book/src/tools/: file-operations.md  overview.md  shell.md  web.md
docs/book/src/usage/: account.md  acp.md  http-api.md  interactive-mode.md  one-shot-mode.md  permissions.md  sessions.md  skills.md
src/: acp.rs  agent.rs  cli.rs  config.rs  context.rs  conversation.rs  error.rs  frontend.rs  history.rs  image.rs  main.rs  mcp.rs  permission.rs  provider.rs  relay.rs  render.rs  repl.rs  sandbox.rs  server.rs  session.rs  setup.rs  shell.rs  skills.rs  stats.rs  system_prompt.rs  tokens.rs  tools.rs
src/mcp/: auth.rs  cli.rs  connector.rs  elicitation.rs  expand.rs  handler.rs  progress.rs  resource_updates.rs  sanitize.rs  transport.rs
src/provider/: claude.rs  cli.rs  mock.rs  openai.rs  retry.rs
src/provider/claude/: api.rs  oauth.rs  shared.rs
src/provider/claude/oauth/: attestation.rs
src/provider/openai/: api.rs  codex.rs
src/provider/openai/codex/: auth.rs  responses.rs
src/server/: auth.rs  errors.rs  gc.rs  handlers.rs  http_frontend.rs  idempotency.rs  openapi.rs  poisoned.rs  reattach.rs  sse.rs  state.rs
src/server/handlers/: discovery.rs  info.rs  messages.rs  responses.rs  sessions.rs  turn.rs
src/skills/: cli.rs
src/tools/: file.rs  find.rs  grep.rs  load_tool.rs  mcp_resources.rs  recall.rs  render.rs  render_image.rs  scratchpad.rs  search.rs  shell.rs  skill.rs  subagent.rs  todo.rs  util.rs  web.rs
tests/: acp.rs  cli.rs  serve.rs
