[package]
name = "agsh"
version = "0.10.3"
edition = "2024"
license = "MIT"
description = "An agentic shell where you speak human, not bash"
repository = "https://github.com/k4yt3x/agsh"

[[bin]]
name = "agsh"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bat = { version = "0.26", default-features = false, features = ["regex-fancy"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
eventsource-stream = "0.2"
fast_html2md = { version = "0.0", features = ["rewriter"] }
futures = "0.3"
glob = "0.3"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
open = "5"
percent-encoding = "2"
rand = "0.9"
reedline = "0.38"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "stream", "rustls", "gzip", "deflate", "brotli"] }
rmcp = { version = "1.3", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "auth", "auth-client-credentials-jwt"] }
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = { version = "0.22", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
termimad = "0.30"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = "0.6"
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
