[package]
name = "meka"
version = "0.27.3"
edition = "2024"
license = "MIT"
description = "A general-purpose AI agent harness"
repository = "https://github.com/k4yt3x/meka"

[dependencies]
agent-client-protocol = "0.12.1"
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
eventsource-stream = "0.2"
fast_html2md = "0.0"
fd-lock = "4"
futures = "0.3"
glob = "0.3"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
humantime-serde = "1"
image = { version = "0.25", default-features = false, features = ["bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
infer = { version = "0.19", default-features = false }
nu-ansi-term = "0.50"
open = "5"
percent-encoding = "2"
rand = "0.10"
reedline = { git = "https://github.com/wtfbbqhax/reedline", rev = "3a457ff1dab28c9021db116f2575eed5116bed88", features = ["external_printer"] }
regex = "1"
reqwest = { version = "0.13", features = ["json", "query", "stream", "gzip", "deflate", "brotli", "cookies"] }
rmcp = { version = "1.7", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "auth", "auth-client-credentials-jwt"] }
rusqlite = { version = "0.37", features = ["bundled"] }
scraper = { version = "0.27", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_norway = "0.9.42"
sha2 = "0.11"
subtle = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "parsing", "plist-load", "regex-fancy"] }
termimad = "0.34"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = "0.7"
tokio-util = { version = "0.7", features = ["compat"] }
toml = "1.1"
toml_edit = "0.25"
tower-http = { version = "0.6", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
url = "2"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }
tempfile = "3"

[lints.clippy]
await_holding_lock = "deny"
expect_used = "warn"
panic = "warn"
unwrap_used = "warn"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
